[tool.poetry]
name = "nav-algorithms"
version = "0.1.0"
description = ""
authors = ["Kevin Weller <klweller@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
heapdict = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
ruff = "^0.1.13"

[tool.maturin]
rust-source = "../rust"
module-name = "nav_algorithms"
